docs: crash course on boba

--- a/.luaurc
+++ b/.luaurc
@@ -4,6 +4,7 @@
     "*": true
   },
   "aliases": {
-    "lune": "~/.lune/.typedefs/0.10.4/"
+    "lune": "~/.lune/.typedefs/0.10.4/",
+    "configure": "./.lune/lib/configure/"
   }
 }
