feat: Boba.Predicate & better Roblox instances

--- a/.luaurc
+++ b/.luaurc
@@ -5,6 +5,7 @@
   },
   "aliases": {
     "lune": "~/.lune/.typedefs/0.10.4/",
-    "configure": "./.lune/lib/configure/"
+    "configure": "./.lune/lib/configure/",
+    "lib": "./.lune/lib/"
   }
 }
